--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "nanoid": "^5.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.48.2",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
